--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "dinero.js": "^1.9.1",
     "luxon": "^1.26.0",
     "sqlite": "^4.0.21",
     "sqlite3": "^5.0.2",
