--- a/.gitignore
+++ b/.gitignore
@@ -115,12 +115,15 @@ dist
 .vscode-test
 
 # yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
+# From yarn migration gide. (Non Zero-install)
+# See: https://yarnpkg.com/getting-started/migration
 .pnp.*
-
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 #### vim ####
 # Swap
